assets/css/index.css
body {
    height: 100%;
    background-color: #F5F5F5;
    overflow: hidden;
}

/* ------------------------------------------------------left box ---------------------------------------------------------- */

.col-6.left-box {
    height: 100%;
}

.left-box .product-container {
    width: 550px;
    height: 75vh;
    padding: 20px;
    background-color: white;
    position: relative;
    top: 50px;
    left: 100px;
    display: flex;
    flex-direction: column;
}

.left-box .product-container .product-image {
    height: 60%;
    margin-bottom: 20px;
    position: relative;
}

.left-box .product-container .product-image i {
    position: absolute;
    color: white;
    right: 15px;
    top: 10px;
}

.left-box .product-container .product-image img {
    height: 100%;
    width: 510px;
}

.left-box .product-container .product-image-attachment {
    height: 20%;
    position: relative;
    margin-bottom: 20px;
}

.left-box .product-container .product-image-attachment p {
    margin-top: 10px !important;
    margin-bottom: 8px !important;
    font-size: 13px !important;
}

.left-box .product-container .product-image-attachment img {
    height: 80px;
    width: 120px;
}

.left-box .product-container .product-image-attachment .close-icon {
    position: absolute;
    left: 115px;
    top: 29px;
}

.left-box .product-container .product-image-details {
    height: 20%;
    margin-bottom: 20px;
}

.left-box .product-container .product-image-details p {
    margin-bottom: 3px !important;
    font-size: 13px;
    color: gray !important;
}


/* ------------------------------------------------------right box ---------------------------------------------------------- */

.col-6.right-box {
    height: 100%;
}

.right-box .product-detail-container {
    height: 90vh;
    width: 600px;
    position: relative;
    top: 50px;
    right: 40px;
    display: flex;
    flex-direction: column;
}

.right-box .product-detail-container .product-detail-section-spacing {
    /* spacing between sections title,tag */
    margin-bottom: 15px;
}

.alert {
    padding: 8px !important;
    background-color: #E3E3E3 !important;
    width: 500px;
    margin-bottom: 0 !important;
}

.right-box .product-detail-container .product-title p,
.right-box .product-detail-container .product-tags p,
.right-box .product-detail-container .suggested-tags p,
.right-box .product-detail-container .product-description p,
.right-box .product-detail-container .product-extras p {
    margin-bottom: 5px !important;
}


.right-box .product-detail-container .product-tags i,
.right-box .product-detail-container .suggested-tags i,
.right-box .product-detail-container .product-description i {
    color: gray;
}

.right-box .product-detail-container .suggested-tags {
    width: 450px;
}

.right-box .product-detail-container .suggested-tags a {
    color: #4285F4;
    margin-right: 20px !important;
}

.right-box .product-detail-container .product-description .description-alert {
    height: 140px;
    overflow: auto;
}

.right-box .product-detail-container .product-extras button {
    width: 40%;
    padding: 15px;
}

.right-box .product-detail-container .product-buttons .btn-pink {
    background-color: #EA4C89;
    color: white;
}

.right-box .product-detail-container .product-buttons .btn-gray {
    border: 1px solid gray;
    color: gray;
}

